rust_port/compile_log.txt
    Checking libomtnet v0.1.0 (/Users/stephen/dev/omt-encode/rust_port/libomtnet)
error[E0432]: unresolved import `futures`
 --> libomtnet/src/channel.rs:3:5
  |
3 | use futures::{SinkExt, StreamExt};
  |     ^^^^^^^ use of unresolved module or unlinked crate `futures`
  |
  = help: if you wanted to use a crate named `futures`, use `cargo add futures` to add it to your `Cargo.toml`

error[E0432]: unresolved import `serde`
 --> libomtnet/src/enums.rs:1:5
  |
1 | use serde::{Deserialize, Serialize};
  |     ^^^^^ use of unresolved module or unlinked crate `serde`
  |
  = help: if you wanted to use a crate named `serde`, use `cargo add serde` to add it to your `Cargo.toml`

error[E0432]: unresolved import `crate::enums::OMTActiveAudioChannels`
 --> libomtnet/src/frame.rs:2:74
  |
2 | ...OMTColorSpace, OMTActiveAudioChannels};
  |                   ^^^^^^^^^^^^^^^^^^^^^^ no `OMTActiveAudioChannels` in `enums`

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `futures`
  --> libomtnet/src/channel.rs:28:33
   |
28 | ...into_split(self) -> (futures::stream::SplitSink<Framed<TcpSt...
   |                         ^^^^^^^ use of unresolved module or unlinked crate `futures`
   |
   = help: if you wanted to use a crate named `futures`, use `cargo add futures` to add it to your `Cargo.toml`

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `futures`
  --> libomtnet/src/channel.rs:28:100
   |
28 | ...MTCodec>, OMTFrame>, futures::stream::SplitStream<Framed<Tcp...
   |                         ^^^^^^^ use of unresolved module or unlinked crate `futures`
   |
   = help: if you wanted to use a crate named `futures`, use `cargo add futures` to add it to your `Cargo.toml`

warning: variant `iOS` should have an upper camel case name
  --> libomtnet/src/enums.rs:58:5
   |
58 |     iOS = 4,
   |     ^^^ help: convert the identifier to upper camel case (notice the capitalization): `IOs`
   |
   = note: `#[warn(non_camel_case_types)]` (part of `#[warn(nonstandard_style)]`) on by default

warning: unused import: `BytesMut`
 --> libomtnet/src/frame.rs:1:33
  |
1 | use bytes::{Buf, BufMut, Bytes, BytesMut};
  |                                 ^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused imports: `OMTCodec`, `OMTColorSpace`, and `OMTVideoFlags`
 --> libomtnet/src/frame.rs:2:34
  |
2 | ...FrameType, OMTCodec, OMTVideoFlags, OMTColorSpace, OMTActiveA...
  |               ^^^^^^^^  ^^^^^^^^^^^^^  ^^^^^^^^^^^^^

warning: unused import: `Cursor`
 --> libomtnet/src/frame.rs:3:21
  |
3 | use std::io::{self, Cursor};
  |                     ^^^^^^

warning: unused import: `tokio::sync::mpsc`
 --> libomtnet/src/channel.rs:6:5
  |
6 | use tokio::sync::mpsc;
  |     ^^^^^^^^^^^^^^^^^

warning: ambiguous glob re-exports
  --> libomtnet/src/lib.rs:10:9
   |
 7 | pub use enums::*;
   |         -------- but the name `OMTCodec` in the type namespace is also re-exported here
...
10 | pub use codec::*;
   |         ^^^^^^^^ the name `OMTCodec` in the type namespace is first re-exported here
   |
   = note: `#[warn(ambiguous_glob_reexports)]` on by default

error[E0599]: no method named `send` found for struct `Framed<T, U>` in the current scope
  --> libomtnet/src/channel.rs:21:21
   |
21 |         self.stream.send(frame).await
   |                     ^^^^ method not found in `Framed<tokio::net::TcpStream, codec::OMTCodec>`

error[E0599]: no method named `next` found for struct `Framed<T, U>` in the current scope
  --> libomtnet/src/channel.rs:25:21
   |
25 |         self.stream.next().await
   |                     ^^^^ method not found in `Framed<tokio::net::TcpStream, codec::OMTCodec>`

error[E0599]: no method named `split` found for struct `Framed<T, U>` in the current scope
  --> libomtnet/src/channel.rs:29:21
   |
29 |         self.stream.split()
   |                     ^^^^^ method not found in `Framed<tokio::net::TcpStream, codec::OMTCodec>`

error[E0382]: borrow of moved value: `src`
  --> libomtnet/src/codec.rs:94:24
   |
13 | ...ode(&mut self, src: &mut BytesMut) -> Result<Option<Self::It...
   |                   --- move occurs because `src` has type `&mut BytesMut`, which does not implement the `Copy` trait
...
79 | ...       let vh = OMTVideoHeader::read(src)?;
   |                                         --- value moved here
...
83 | ...      let ah = OMTAudioHeader::read(src)?;
   |                                        --- value moved here
...
94 | ...  let data = src.split_to(payload_len).freeze();
   |                 ^^^ value borrowed here after move
   |
help: consider creating a fresh reborrow of `src` here
   |
83 |                 let ah = OMTAudioHeader::read(&mut *src)?;
   |                                               ++++++
help: consider creating a fresh reborrow of `src` here
   |
79 |                  let vh = OMTVideoHeader::read(&mut *src)?;
   |                                                ++++++

warning: value assigned to `total_size` is never read
  --> libomtnet/src/codec.rs:29:30
   |
29 |         let mut total_size = OMTFrameHeader::SIZE;
   |                              ^^^^^^^^^^^^^^^^^^^^
   |
   = help: maybe it is overwritten before being read?
   = note: `#[warn(unused_assignments)]` (part of `#[warn(unused)]`) on by default

warning: value assigned to `total_size` is never read
  --> libomtnet/src/codec.rs:37:9
   |
37 |         total_size += extended_header_size;
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: maybe it is overwritten before being read?

Some errors have detailed explanations: E0382, E0432, E0433, E0599.
For more information about an error, try `rustc --explain E0382`.
warning: `libomtnet` (lib) generated 8 warnings
error: could not compile `libomtnet` (lib) due to 9 previous errors; 8 warnings emitted
